# WikiSeed-Server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCKER.md  Dockerfile  ISSUES.md  ISSUES_CREATION_README.md  Makefile  README.md  bigpicture.md  claude.md  config.example.yaml  create_github_issues.py  docker-compose.dev.yml  docker-compose.yml  issues_data.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md
downloader/: .gitignore  GITHUB_WORKFLOW.md  README.md  SWITCHING_DUMPS.md  check_status.py  config.py  config.py.example  maintain.sh  requirements.txt  run.sh  setup.sh  status.sh  update.sh  wikimedia_downloader.py
migrations/: 001_initial.sql
scripts/: create_test_job.py  init_db.py  test_downloader.py
src/common/: config.py  database.py  logging.py
src/downloader/: __init__.py  __main__.py  client.py  worker.py
src/scraper/: README.md  __init__.py  __main__.py  archiver.py  wikimedia.py  worker.py
tests/: conftest.py
tests/test_common/: test_config.py
